# terminal-copilot

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md
src/: main.py
src/terminal_copilot/: cli.py
tests/: test_smoke.py
